@@ -6,12 +6,12 @@ import io.leavesfly.jimi.tool.Tool;
 import io.leavesfly.jimi.tool.ToolProvider;
 
 import io.leavesfly.jimi.tool.core.SubAgentTool;
+import io.leavesfly.jimi.tool.core.SubagentResultTool;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.context.ApplicationContext;
 import org.springframework.stereotype.Component;
 
-import java.util.Collections;
 import java.util.List;
 
 /**
@@ -20,6 +20,7 @@ import java.util.List;
  * 职责：
  * - 检测 Agent 是否配置了 subagents
  * - 创建 SubAgentTool 工具实例
+ * - 创建 SubagentResult 工具实例（查询异步子 Agent）
  * 
  * 加载条件：
  * - Agent 的 subagents 配置不为空
@@ -47,8 +48,11 @@ public class TaskToolProvider implements ToolProvider {
         // 从 Spring 容器获取 SubAgentTool 原型实例
         SubAgentTool subAgentTool = applicationContext.getBean(SubAgentTool.class);
         subAgentTool.setRuntimeParams(agentSpec, jimiRuntime);
-        
-        return Collections.singletonList(subAgentTool);
+
+        // SubagentResult 与异步模式配对：只启动不能汇收，异步能力就是残的
+        SubagentResultTool subagentResultTool = applicationContext.getBean(SubagentResultTool.class);
+
+        return List.of(subAgentTool, subagentResultTool);
     }
     
     @Override
